# x2s3

./: .gitignore  README.md  config.template.yaml  config.yaml.template  environment.yaml  pyproject.toml  requirements.txt  run.py  run.sh  serve.py
.devcontainer/: Dockerfile  README.md  devcontainer.json  post-create.sh
.github/workflows/: python-ci.yml
docker/: Dockerfile  docker-compose.yml  nginx.conf
docker/include/: proxy_cache.conf  proxy_pass.conf  ssl.conf
docs/: Config.md  Development.md
jproxy/: __init__.py  app.py  client.py  client_aioboto.py  client_file.py  proxy_aioboto.py  proxy_boto3.py  proxy_fsspec.py  registry.py  serve.py  settings.py  utils.py
scripts/: compare_s3.py
templates/: browse.html  index.html
tests/: test_awss3.py  test_base.py  test_boto.py  test_file.py  test_file_performance.py  test_serve.py  test_xss_prevention.py
tests/java/: pom.xml
tests/java/src/test/java/org/janelia/x2s3/: S3CompatTest.java
x2s3/: app.py  client.py  client_aioboto.py  client_file.py  settings.py  utils.py
