[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "x2s3"
version = "0.8.2"
description = "RESTful web service which makes any storage system X available as an S3-compatible REST API"
readme = "README.md"
authors = [
    { name = "Konrad Rokicki", email = "rokicki@janelia.hhmi.org" }
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = [
    "aiobotocore >=2.22",
    "boto3 >=1.37",
    "botocore >=1.37",
    "fastapi >=0.115",
    "loguru >=0.7",
    "pydantic >=2.11",
    "pydantic-settings >=2.9",
    "pydantic-settings-yaml >=0.2.0",
    "python-dateutil >=2.9",
    "pytest >=8.3",
    "starlette >=0.46",
    "typing_extensions >=4.13",
    "uvicorn >=0.34",
    "jinja2 >=3.1"
]
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-html",
    "httpx >=0.28"
]

[project.urls]
Homepage = "https://github.com/JaneliaSciComp/x2s3"
Repository = "https://github.com/JaneliaSciComp/x2s3"

[tool.setuptools]
packages = ["x2s3"] 
